organisation des fichiers

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pong</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
 <main role="main">
@@ -20,6 +20,6 @@
     <canvas id="canvas" width="640" height="480"></canvas>
 </main>
 
-<script src="exec.js"></script>
+<script src="./execs/exec.js"></script>
 </body>
 </html>
